@@ -1,3 +1,11 @@
+2007-12-21  Ludovic Marcotte <ludovic@inverse.ca>
+	
+	* UI/Contacts/UIxContactView.m
+	Modified -secondaryEmail so that we always get
+	the "last" email address in case no preferred
+	one was specified in the vCard. Also fixed
+	a memory leak in this method.
+
 2007-12-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
